<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/jhGrayLight"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/article_number"
        style="@style/editTextAddFormStyle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center"
        android:layout_margin="@dimen/default_margin_article"
        android:text="@string/default_article_number"
        android:background="@color/jhTextColorWhite"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/article_name"
        style="@style/editTextAddFormStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/default_margin_article"
        android:layout_weight="2"
        android:background="@color/jhTextColorWhite"
        android:text="@string/default_name_article" />

    <TextView
        android:id="@+id/article_count"
        style="@style/editTextAddFormStyle"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin_article"
        android:background="@color/jhTextColorWhite"
        android:text="@string/default_articleCount"
        android:textAlignment="textEnd" />

</LinearLayout>