<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/start_page"

    >
    <fragment
        android:id="@+id/start_page"
        android:name="com.example.jhserviceapp.presentation.StartFragment"
        android:label="@string/jh_service_label_start_page"
        tools:layout="@layout/start_fragment">
        <action
            android:id="@+id/fromStartPageToMainPage"
            app:destination="@+id/main_page"
            app:enterAnim="@anim/enter_slide_left"
            app:exitAnim="@anim/exit_slide_left"
            app:launchSingleTop="true"
            app:popUpTo="@id/main_page"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/main_page"
        android:name="com.example.jhserviceapp.presentation.main.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/main_fragment">
        <action
            android:id="@+id/fromMainPageToCreateReportPage"
            app:destination="@+id/add_report_page"
            app:enterAnim="@anim/enter_slide_left"
            app:exitAnim="@anim/exit_slide_left" />
        <action
            android:id="@+id/fromMainPageToSettingsPage"
            app:destination="@id/settings_page"
            app:enterAnim="@anim/enter_slide_left"
            app:exitAnim="@anim/exit_slide_left" />
    </fragment>

    <fragment
        android:id="@+id/add_report_page"
        android:name="com.example.jhserviceapp.presentation.addart.AddReportFragment"
        android:label="@string/add_new_report_label"
        tools:layout="@layout/add_report_fragment">
        <action
            android:id="@+id/fromCreateReportPageToMainPage"
            app:destination="@id/main_page"
            app:enterAnim="@anim/enter_slide_right"
            app:exitAnim="@anim/exit_slide_right"
            app:popUpTo="@id/main_page" />


    </fragment>

    <fragment
        android:id="@+id/settings_page"
        android:name="com.example.jhserviceapp.presentation.settings.SettingsFragment"
        android:label="@string/settings_lable"
        tools:layout="@layout/settings_fragment">
        <action
            android:id="@+id/fromSettingPageToMain_page"
            app:destination="@id/main_page"
            app:enterAnim="@anim/enter_slide_right"
            app:exitAnim="@anim/exit_slide_right"
            app:popUpTo="@id/main_page" />
    </fragment>
</navigation>