<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="5dp"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/jhYellow"
        android:padding="20dp">

        <TextView
            android:id="@+id/week_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:text="@string/today_default_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/week_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_22_01_2024_26_01_2024_default_text"
            android:textSize="20sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/week_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:text="@string/_22_01_2024_default_text"
            android:textSize="20sp" />
    </FrameLayout>

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/report_recycler_view"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        tools:itemCount="2"-->
<!--        tools:listitem="@layout/report_item" />-->
</LinearLayout>