<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/jhGrayLight"
    android:foreground="@drawable/bg_corner_radius_white_5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/article_number"
            style="@style/editTextAddFormStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_margin="@dimen/default_margin_article"
            android:hint="@string/default_article"
            android:background="@color/jhTextColorWhite"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/article_name"
            style="@style/editTextAddFormStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_margin_article"
            android:layout_weight="2"
            android:background="@color/jhTextColorWhite"
            android:inputType="text"
            android:hint="@string/default_name_article" />

        <EditText
            android:id="@+id/article_count"
            style="@style/editTextAddFormStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_article"
            android:background="@color/jhTextColorWhite"
            android:inputType="numberDecimal"
            android:hint="@string/default_articleCount"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/engineer_number"
            style="@style/editTextAddFormStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/default_hint_user_number"
            android:layout_margin="@dimen/default_margin_article"
            android:background="@color/jhTextColorWhite"
            android:layout_gravity="center"
            android:inputType="numberDecimal" />

        <CheckBox
            android:id="@+id/is_paid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/delete_article_row_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:padding="2dp"
            android:src="@drawable/ic_delete_basket" />

    </LinearLayout>
</LinearLayout>